// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ShowScansModal should call onDownload with a report id when clicked: onDownload 1`] = `
[
  [
    67890,
  ],
]
`;

exports[`ShowScansModal should have the correct title: title 1`] = `
<span
  class="pf-v6-c-modal-box__title-text"
>
  t([
  "view.label",
  {
    "context": "scans-names",
    "name": "Lorem ipsum"
  }
])
</span>
`;

exports[`ShowScansModal should render a basic component: basic 1`] = `
<Modal
  actions={[]}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  position="default"
  showClose={true}
  title="t([
  "view.label",
  {
    "context": "scans-names",
    "name": "Lorem ipsum"
  }
])"
  titleIconVariant={null}
  titleLabel=""
  variant="medium"
>
  <Bullseye>
    <EmptyState
      headingLevel="h2"
      icon={[Function]}
      titleText="t([
  "view.scans.show-modal.loading"
])"
    />
  </Bullseye>
</Modal>
`;

exports[`getSortValue should return the correct sort value for the given column index: sort value for invalid index 1`] = `""`;

exports[`getSortValue should return the correct sort value for the given column index: sort value for status 1`] = `"completed"`;

exports[`getSortValue should return the correct sort value for the given column index: sort value for time 1`] = `1730037600000`;

exports[`sortByLatestTime should sort scan jobs by latest scan time in descending order: sorted by latest time 1`] = `
[
  {
    "end_time": 2024-10-27T14:00:00.000Z,
    "id": 1,
    "report_id": 101,
    "start_time": 2024-10-27T12:00:00.000Z,
    "status": "completed",
  },
  {
    "end_time": 2024-10-27T11:00:00.000Z,
    "id": 2,
    "report_id": 102,
    "start_time": 2024-10-27T10:00:00.000Z,
    "status": "running",
  },
  {
    "end_time": 2024-10-26T12:00:00.000Z,
    "id": 3,
    "report_id": 103,
    "start_time": 2024-10-26T10:00:00.000Z,
    "status": "failed",
  },
]
`;

exports[`sortJobs should sort jobs by status in ascending order: sorted jobs by status (asc) 1`] = `
[
  {
    "end_time": 2024-10-26T12:00:00.000Z,
    "id": 2,
    "report_id": 102,
    "start_time": 2024-10-26T10:00:00.000Z,
    "status": "completed",
  },
  {
    "end_time": 2024-10-28T12:00:00.000Z,
    "id": 3,
    "report_id": 103,
    "start_time": 2024-10-28T10:00:00.000Z,
    "status": "failed",
  },
  {
    "end_time": 2024-10-27T12:00:00.000Z,
    "id": 1,
    "report_id": 101,
    "start_time": 2024-10-27T10:00:00.000Z,
    "status": "running",
  },
]
`;

exports[`sortJobs should sort jobs by status in descending order: sorted jobs by status (desc) 1`] = `
[
  {
    "end_time": 2024-10-27T12:00:00.000Z,
    "id": 1,
    "report_id": 101,
    "start_time": 2024-10-27T10:00:00.000Z,
    "status": "running",
  },
  {
    "end_time": 2024-10-28T12:00:00.000Z,
    "id": 3,
    "report_id": 103,
    "start_time": 2024-10-28T10:00:00.000Z,
    "status": "failed",
  },
  {
    "end_time": 2024-10-26T12:00:00.000Z,
    "id": 2,
    "report_id": 102,
    "start_time": 2024-10-26T10:00:00.000Z,
    "status": "completed",
  },
]
`;

exports[`sortJobs should sort jobs by time in ascending order: sorted jobs by time (asc) 1`] = `
[
  {
    "end_time": 2024-10-26T12:00:00.000Z,
    "id": 2,
    "report_id": 102,
    "start_time": 2024-10-26T10:00:00.000Z,
    "status": "completed",
  },
  {
    "end_time": 2024-10-27T12:00:00.000Z,
    "id": 1,
    "report_id": 101,
    "start_time": 2024-10-27T10:00:00.000Z,
    "status": "running",
  },
  {
    "end_time": 2024-10-28T12:00:00.000Z,
    "id": 3,
    "report_id": 103,
    "start_time": 2024-10-28T10:00:00.000Z,
    "status": "failed",
  },
]
`;

exports[`sortJobs should sort jobs by time in descending order: sorted jobs by time (desc) 1`] = `
[
  {
    "end_time": 2024-10-28T12:00:00.000Z,
    "id": 3,
    "report_id": 103,
    "start_time": 2024-10-28T10:00:00.000Z,
    "status": "failed",
  },
  {
    "end_time": 2024-10-27T12:00:00.000Z,
    "id": 1,
    "report_id": 101,
    "start_time": 2024-10-27T10:00:00.000Z,
    "status": "running",
  },
  {
    "end_time": 2024-10-26T12:00:00.000Z,
    "id": 2,
    "report_id": 102,
    "start_time": 2024-10-26T10:00:00.000Z,
    "status": "completed",
  },
]
`;
